After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617880 - Fix nullable object args
Fix nullable object args
Status: RESOLVED FIXED
Product: pygi
Classification: Deprecated
Component: general
unspecified
Other All
: Normal normal
: 0.6
Assigned To: pygi-maint
pygi-maint
: 618572 (view as bug list)
Depends on: 617876
Blocks:
 
 
Reported: 2010-05-06 10:11 UTC by Tomeu Vizoso
Modified: 2010-05-23 09:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix nullable object args (1.83 KB, patch)
2010-05-06 10:11 UTC, Tomeu Vizoso
committed Details | Review

Description Tomeu Vizoso 2010-05-06 10:11:22 UTC
.
Comment 1 Tomeu Vizoso 2010-05-06 10:11:24 UTC
Created attachment 160420 [details] [review]
Fix nullable object args
Comment 2 Johan (not receiving bugmail) Dahlin 2010-05-06 10:50:03 UTC
Review of attachment 160420 [details] [review]:

Looks good, but the commit message could be improved. It should say why the change is needed, not what it does.
Comment 3 johnp 2010-05-14 15:23:33 UTC
Just change the commit message to:

if None is passed to an interface which takes an object, convert it to
NULL

 * without this patch PyGI treats the None object as a PyGObject and ends up extracting garbage data causing a crash
 * None's equivalent in C is NULL so we must provide a special case where we marshal the None as NULL
Comment 4 johnp 2010-05-14 15:24:19 UTC
*** Bug 618572 has been marked as a duplicate of this bug. ***
Comment 5 Tomeu Vizoso 2010-05-23 09:01:14 UTC
This one fell off my radar, I'm pushing it with J5's comment, thanks!