If None is passed to an interface which takes an object, convert it to NULL

* without this patch PyGI treats the None object as a PyGObject and ends up
extracting garbage data causing a crash
 * None's equivalent in C is NULL so we must provide a special case where we
marshal the None as NULL

https://bugzilla.gnome.org/show_bug.cgi?id=617880